[gd_scene load_steps=20 format=2]

[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=1]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=2]
[ext_resource path="res://offline_levels/general_scenes/pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://offline_mode_Asset/level_6/whiteBrown.png" type="Texture" id=4]
[ext_resource path="res://offline_mode_Asset/level_6/brown.png" type="Texture" id=5]
[ext_resource path="res://offline_mode_Asset/level_6/whiteBlue.png" type="Texture" id=6]
[ext_resource path="res://offline_mode_Asset/level_6/orange.png" type="Texture" id=7]
[ext_resource path="res://offline_mode_Asset/level_6/blue.png" type="Texture" id=8]
[ext_resource path="res://offline_mode_Asset/level_6/green.png" type="Texture" id=9]
[ext_resource path="res://offline_mode_Asset/level_6/rj45.png" type="Texture" id=10]
[ext_resource path="res://offline_mode_Asset/level_6/whiteOrange.png" type="Texture" id=11]
[ext_resource path="res://offline_mode_Asset/level_6/whiteGreen.png" type="Texture" id=12]
[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://offline_levels/level6/slot.gd" type="Script" id=14]
[ext_resource path="res://offline_levels/level6/wire.gd" type="Script" id=15]
[ext_resource path="res://offline_levels/level6/manager.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 13 )

[node name="level6" type="Node2D"]
script = ExtResource( 16 )
wire_container = NodePath("wire_container")
slot_container = NodePath("slot_container")
submit_button = NodePath("button_container/submit")

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 3 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 1 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 2 )]
visible = false

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "Simply tap and hold on the file icon. While holding, drag it towards the folder that you believe is the most suitable match for the file's content. Release your finger to drop the file into the chose folder. Make strategic choices to efficiently organize your files and progress through the game's challenges. Good luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 1 )
anims/animation = SubResource( 2 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false
frame = 0

[node name="rj45" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 67.0
margin_top = 50.0
margin_right = 978.0
margin_bottom = 1091.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="slot_container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 20.0
margin_bottom = 20.0

[node name="slot1" type="TextureRect" parent="slot_container"]
margin_left = 139.0
margin_top = 82.0
margin_right = 172.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot2" type="TextureRect" parent="slot_container"]
margin_left = 179.0
margin_top = 82.0
margin_right = 212.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot3" type="TextureRect" parent="slot_container"]
margin_left = 219.0
margin_top = 82.0
margin_right = 252.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot4" type="TextureRect" parent="slot_container"]
margin_left = 259.0
margin_top = 82.0
margin_right = 292.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot5" type="TextureRect" parent="slot_container"]
margin_left = 299.0
margin_top = 82.0
margin_right = 332.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot6" type="TextureRect" parent="slot_container"]
margin_left = 339.0
margin_top = 82.0
margin_right = 372.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot7" type="TextureRect" parent="slot_container"]
margin_left = 379.0
margin_top = 82.0
margin_right = 412.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="slot8" type="TextureRect" parent="slot_container"]
margin_left = 419.0
margin_top = 82.0
margin_right = 452.0
margin_bottom = 451.0
rect_min_size = Vector2( 33, 369 )
script = ExtResource( 14 )
type = "slot"

[node name="button_container" type="GridContainer" parent="."]
margin_left = 72.0
margin_top = 605.0
margin_right = 522.0
margin_bottom = 680.0
rect_min_size = Vector2( 200, 75 )
custom_constants/hseparation = 50
columns = 2

[node name="reset" type="Button" parent="button_container"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 3 )
text = "RESET"

[node name="submit" type="Button" parent="button_container"]
margin_left = 250.0
margin_right = 450.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 3 )
text = "SUBMIT"

[node name="wire_container" type="Control" parent="."]

[node name="wire1" type="TextureRect" parent="wire_container"]
margin_left = 655.0
margin_top = 167.0
margin_right = 719.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 11 )
script = ExtResource( 15 )
type = "wire"

[node name="wire2" type="TextureRect" parent="wire_container"]
margin_left = 723.0
margin_top = 167.0
margin_right = 787.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
script = ExtResource( 15 )
type = "wire"

[node name="wire3" type="TextureRect" parent="wire_container"]
margin_left = 791.0
margin_top = 167.0
margin_right = 855.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )
script = ExtResource( 15 )
type = "wire"

[node name="wire4" type="TextureRect" parent="wire_container"]
margin_left = 859.0
margin_top = 167.0
margin_right = 923.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )
script = ExtResource( 15 )
type = "wire"

[node name="wire5" type="TextureRect" parent="wire_container"]
margin_left = 927.0
margin_top = 167.0
margin_right = 991.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
script = ExtResource( 15 )
type = "wire"

[node name="wire6" type="TextureRect" parent="wire_container"]
margin_left = 995.0
margin_top = 167.0
margin_right = 1059.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 9 )
script = ExtResource( 15 )
type = "wire"

[node name="wire7" type="TextureRect" parent="wire_container"]
margin_left = 1063.0
margin_top = 167.0
margin_right = 1127.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
script = ExtResource( 15 )
type = "wire"

[node name="wire8" type="TextureRect" parent="wire_container"]
margin_left = 1131.0
margin_top = 167.0
margin_right = 1195.0
margin_bottom = 904.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )
script = ExtResource( 15 )
type = "wire"

[connection signal="pressed" from="button_container/reset" to="." method="_on_reset_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/pause_popup"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
